syntax = "proto3";

package obs_remote.profiles;

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/wrappers.proto";

service Profiles {
  // Gets an array of all profiles.
  //
  // Original: GetProfileList
  rpc List(google.protobuf.Empty) returns (ListReply);
  // Get the currently active profile.
  //
  // Original: **MISSING**
  rpc Current(google.protobuf.Empty) returns (google.protobuf.StringValue);
  // Switches to a profile.
  //
  // Original: SetCurrentProfile
  rpc SetCurrent(google.protobuf.StringValue) returns (google.protobuf.Empty);
  // Gets a parameter from the current profile's configuration.
  //
  // Original: GetProfileParameter
  rpc Parameter(ParameterRequest) returns (ParameterReply);
  // Sets the value of a parameter in the current profile's configuration.
  //
  // Original: SetProfileParameter
  rpc SetParameter(SetParameterRequest) returns (google.protobuf.Empty);
  // Original: GetPersistentData
  rpc PersistentData(google.protobuf.StringValue)
      returns (google.protobuf.Struct);
  // Original: SetPersistentData
  rpc SetPersistentData(SetPersistentDataRequest)
      returns (google.protobuf.Empty);
  // Creates a new profile, switching to it in the process.
  //
  // Original: CreateProfile
  rpc Create(google.protobuf.StringValue) returns (google.protobuf.Empty);
  // Removes a profile. If the current profile is chosen, it will change to a
  // different profile first.
  //
  // Original: DeleteProfile
  rpc Delete(google.protobuf.StringValue) returns (google.protobuf.Empty);
}

message ListReply {
  // The name of the current profile.
  string current = 1;
  // Array of all available profiles.
  repeated string profiles = 2;
}

message ParameterRequest {
  // Category of the parameter to get.
  string category = 1;
  // Name of the parameter to get.
  string name = 2;
}

message ParameterReply {
  // Value associated with the parameter. Missing if not set or no default.
  google.protobuf.StringValue value = 1;
  // Default value associated with the parameter. Missing if on defualt.
  google.protobuf.StringValue default = 2;
}

message SetParameterRequest {
  // Category of the parameter to set.
  string category = 1;
  // Name of the parameter to set.
  string name = 2;
  // Value of the parameter to set. Use a missing value to delete.
  google.protobuf.StringValue value = 3;
}

message SetPersistentDataRequest {
  // The name of the slot to save data to.
  string name = 1;
  // The value to apply to the slot.
  google.protobuf.Struct value = 2;
}
