syntax = "proto3";

package profiles.v1;

import "google/protobuf/struct.proto";
import "google/protobuf/wrappers.proto";

service ProfilesService {
  // Gets an array of all profiles.
  rpc List(ListRequest) returns (ListResponse);
  // Get the currently active profile.
  rpc Current(CurrentRequest) returns (CurrentResponse);
  // Switches to a profile.
  rpc SetCurrent(SetCurrentRequest) returns (SetCurrentResponse);
  // Gets a parameter from the current profile's configuration.
  rpc Parameter(ParameterRequest) returns (ParameterResponse);
  // Sets the value of a parameter in the current profile's configuration.
  rpc SetParameter(SetParameterRequest) returns (SetParameterResponse);
  // Gets the value of a "slot" in the profile data realm.
  rpc PersistentData(PersistentDataRequest) returns (PersistentDataResponse);
  // Sets the value of a "slot" in the profile data realm.
  rpc SetPersistentData(SetPersistentDataRequest) returns (SetPersistentDataResponse);
  // Creates a new profile, switching to it in the process.
  rpc Create(CreateRequest) returns (CreateResponse);
  // Removes a profile. If the current profile is chosen, it will change to a
  // different profile first.
  rpc Remove(RemoveRequest) returns (RemoveResponse);
}

message ListRequest {}

message ListResponse {
  // The name of the current profile.
  string current = 1;
  // Array of all available profiles.
  repeated string profiles = 2;
}

message CurrentRequest {}

message CurrentResponse {
  // The name of the currently active profile.
  string name = 1;
}

message SetCurrentRequest {
  // Name of the profile to switch to.
  string name = 1;
}

message SetCurrentResponse {}

message ParameterRequest {
  // Category of the parameter to get.
  string category = 1;
  // Name of the parameter to get.
  string name = 2;
}

message ParameterResponse {
  // Value associated with the parameter. Missing if not set or no default.
  google.protobuf.StringValue value = 1;
  // Default value associated with the parameter. Missing if on defualt.
  google.protobuf.StringValue default = 2;
}

message SetParameterRequest {
  // Category of the parameter to set.
  string category = 1;
  // Name of the parameter to set.
  string name = 2;
  // Value of the parameter to set. Use a missing value to delete.
  google.protobuf.StringValue value = 3;
}

message SetParameterResponse {}

message PersistentDataRequest {
  // Name of the data slot to retrieve.
  string name = 1;
}

message PersistentDataResponse {
  // Content of the slot.
  google.protobuf.Value value = 1;
}

message SetPersistentDataRequest {
  // The name of the slot to save data to.
  string name = 1;
  // The value to apply to the slot.
  google.protobuf.Value value = 2;
}

message SetPersistentDataResponse {}

message CreateRequest {
  // Name of the new profile.
  string name = 1;
}

message CreateResponse {}

message RemoveRequest {
  // Name of the profile to delete.
  string name = 1;
}

message RemoveResponse {}
